testdata/error/balance_incorrect.ledger
; Example of Ledger with incorrect balance

2024/01/20 * Initial
    Assets:Bank                              100,000 JPY
    Equity

2024/01/20 * Shop
    Assets:Bank                              -10,000 JPY = 80,000 JPY
    Expenses:Cash                             10,000 JPY
